# p2_try2

p2/: README
p2/src/: CMakeLists.txt
p2/src/application/: CMakeLists.txt
p2/src/p2/: CMakeLists.txt  main.cpp  project.cpp  project.hpp
p2/src/scene/: CMakeLists.txt
